[package]
name = "rodio"
version = "0.13.1"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Audio playback library"
keywords = ["audio", "playback", "gamedev"]
repository = "https://github.com/RustAudio/rodio"
documentation = "http://docs.rs/rodio"
edition = "2018"

[dependencies]
cpal = "0.13"
claxon = { version = "0.4.2", optional = true }
hound = { version = "3.3.1", optional = true }
lewton = { version = "0.10", optional = true }
symphonia = {path="../symphonia/symphonia", optional = true, features = [ "aac", "mp3", "isomp4" ] }
pretty_env_logger = "0.4.0"

[features]
default = ["flac", "vorbis", "wav", "mp3"]

flac = ["claxon"]
vorbis = ["lewton"]
wav = ["hound"]
mp3 = ["symphonia"]
wasm-bindgen = ["cpal/wasm-bindgen"]

[dev-dependencies]
quickcheck = "0.9.2"
