[package]
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Audio playback library"
documentation = "http://docs.rs/rodio"
edition = "2018"
keywords = ["audio", "playback", "gamedev"]
license = "MIT OR Apache-2.0"
name = "rodio"
repository = "https://github.com/RustAudio/rodio"
version = "0.14.0"

[dependencies]
cpal = {git = "https://github.com/aschey/cpal", rev = "6b758f4"}
hound = {version = "3.3.1", optional = true}
lewton = {git = "https://github.com/aschey/lewton", rev = "4c1bd3f", optional = true}
ogg_metadata = {version = "0.4.1", optional = true}
pretty_env_logger = "0.4.0"
symphonia = {git = "https://github.com/aschey/symphonia", rev = "85b4c90", optional = true, features = ["aac", "mp3", "isomp4"]}

[features]
default = ["flac", "vorbis", "wav", "mp3"]

aac = ["symphonia"]
dummy = ["cpal/dummy"]
flac = ["symphonia"]
mp3 = ["symphonia"]
vorbis = ["lewton", "ogg_metadata"]
wasm-bindgen = ["cpal/wasm-bindgen"]
wav = ["hound"]

[dev-dependencies]
quickcheck = "0.9.2"
